--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,4 +3,37 @@
 {% block title %}Products List - {% endblock %}
 
 {% block body %}
+    <h1>Products List</h1>
+    <hr>
+    <div class="row">
+        <div class="col-md-12">
+            <a href="" class="btn btn-primary btn-lg float-right">
+                Add product
+            </a>
+        </div>
+    </div>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for product in products %}
+                <tr>
+                    <td>{{ product.id }}</td>
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.price }}</td>
+                    <td>
+                        <a class="btn btn-sm btn-warning"><i class="fa fa-eye"></i></a>
+                        <a class="btn btn-sm btn-success"><i class="fa fa-pencil-alt"></i></a>
+                        <a class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></a>
+                    </td>
+                </tr>                
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
