Fix product title

--- a/templates/product/create.html.twig
+++ b/templates/product/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create Product - {% endblock %}
+{% block title %}Register Product - {% endblock %}
 
 {% block body %}
     <h1>Register product</h1>
