--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -14,7 +14,7 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
-            <a href="" class="btn btn-primary btn-lg float-right">
+            <a href="{{ path("product_register") }}" class="btn btn-primary btn-lg float-right">
                 Add product
             </a>
         </div>
@@ -35,9 +35,9 @@
                     <td>{{ product.name }}</td>
                     <td>{{ product.price }}</td>
                     <td>
-                        <a class="btn btn-sm btn-warning"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-sm btn-success"><i class="fa fa-pencil-alt"></i></a>
-                        <a class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></a>
+                        <a href="/product/" class="btn btn-sm btn-warning"><i class="fa fa-eye"></i></a>
+                        <a href="{{ path("product_edit", {"id": product.id}) }}" class="btn btn-sm btn-success"><i class="fa fa-pencil-alt"></i></a>
+                        <a href="/product/" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>                
             {% endfor %}
