--- a/templates/product/view.html.twig
+++ b/templates/product/view.html.twig
@@ -19,11 +19,11 @@
             </tr>
             <tr>
                 <th>Price</th>
-                <td>{{ product.price }}</td>
+                <td>$ {{ product.price|number_format(2, ",", ".") }}</td>
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ product.description }}</td>
+                <td>{{ product.description|nl2br }}</td>
             </tr>
         </tbody>
     </table>
